fix(tablePagination): spacing

--- a/HRnet/src/components/table/subcomponents/tablePagination.scss
+++ b/HRnet/src/components/table/subcomponents/tablePagination.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding-inline: 1rem;
+    gap: 1rem;
 
     @media (max-width: 640px) {
         flex-direction: column;
